Snip snip and fixes to world news

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -179,13 +179,13 @@ worldnews.25.c:0 "A brilliant victory for Chairman Glais!"
 worldnews.25.e:0 "No true Welshman, no true Scotsman, would abandon Britain!"
 worldnews.25.f:0 "Chairman Glais keeps the interest of the Welsh and Scots at heart!"
 
-worldnews.26.t:0 "Sylvia Pankhurst elected as Chairman of the TUC"
-worldnews.26.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union, Maximists, Autonomists, Federationists and Congregationists, to butt heads over the position.\n\nAnd as the dust settled, Sylvia Pankhurst, the leader of the Congregationists, was elected as the new Chairman, or Chairwoman in this case. Pankhurst is one of only a few female leaders on the planet, and her ideology of a radical feminist and egalitarian approach fit this situation."
+worldnews.26.t:0 "Annie Kenney elected as Chairwoman of the TUC"
+worldnews.26.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union, Maximists, Autonomists, Federationists and Congregationists, to butt heads over the position.\n\nAnd as the dust settled, Annie Kenney, the leader of the Congregationists, was elected as the new Chairman, or Chairwoman in this case. Pankhurst is one of only a few female leaders on the planet, and her ideology of a radical feminist and egalitarian approach and isolationist policies fits this situation."
 worldnews.26.a:0 "A radical feminist? How humiliating for Britain."
 worldnews.26.b:0 "A fair mandate, but a missed opportunity to truly change from current policy."
-worldnews.26.c:0 "Our most sincere congratulations to Chairwoman Pankhurst."
+worldnews.26.c:0 "Our most sincere congratulations to Chairwoman Kenney."
 worldnews.26.e:0 "This is no achievement, let us hope she doesn't cause more damage."
-worldnews.26.f:0 "Chairwoman Pankhurst will bring much-needed change to the TUC."
+worldnews.26.f:0 "Chairwoman Kenney will bring much-needed change to the TUC."
 
 worldnews.27.t:0 "Arthur Horner elected as Chairman of the TUC"
 worldnews.27.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union, Maximists, Autonomists, Federationists and Congregationists, to butt heads over the position.\n\nAnd as the dust settled, Arthur Horner, the current General Secretary, has been chosen as Snowden's successor. He and his Federationists are in favour of keeping the status quo, a position getting harder and harder to maintain in this changing world."
@@ -589,7 +589,7 @@ worldnews.262.f:0 "This is extremely concerning. Siam has no business in India, 
 
 worldnews.263.t:0 "The Fall of New Delhi" #Siam
 worldnews.263.d:0 "[SIA.GetAdjective] offensives continue across the Indian subcontinent, and the fall of New Delhi recently crowned this campaign. As the capital of a potential united India, this city is of immense strategic importance and its loss may prove to be a decisive factor in the ongoing Indian campaign.\n\nThe Viceroy himself was reportedly captured by [SIA.GetAdjective] forward units while he was supervising the transfer of his belongings from the Viceroy's House to a truck caravan, but this has not yet been confirmed."
-worldnews.263.a:0 "New Delhi still was the capital of a divided India. And thus it falls."
+worldnews.263.a:0 "New Delhi still was the capital of a divided India. And divided it falls."
 worldnews.263.b:0 "With New Delhi in our hands, we promise the Indian people freedom from Western influence."
 worldnews.263.c:0 "This is an absolute disaster, we must consult with our Entente allies, now!"
 worldnews.263.e:0 "Are Siamese Imperialists really any better than British Imperialists?"
@@ -653,7 +653,7 @@ worldnews.272.d:0 "Reports from Paris confirm that the Communard capital has bee
 worldnews.272.a:0 "Canada and their reactionary puppet state must be driven out!"
 worldnews.272.b:0 "There is a certain pride in seeing our army parade in Paris, but let us stay focused."
 worldnews.272.c:0 "[CAN.GetLeader] is well on his way to bring the Entente back on the continent."
-worldnews.272.e:0 "We thank our British friends for this. We will parade through Paris many times thereafter."
+worldnews.272.e:0 "We thank our British friends for this. We will parade through Paris soon."
 
 worldnews.273.t:0 "The Fall of Paris" #Italy
 worldnews.273.d:0 "Reports from Paris confirm that the Communard capital has been captured by advancing Italian troops after furious fighting across its large avenues and the Seine. Communard forces put up stiff resistance, hoping to delay the Italian forces for as long as possible, but were eventually beaten back.\n\nAs shocked Parisians looked on, the Italian Army paraded down the Champs-Elysées and towards the Eiffel Tower, culminating in a ceremony at the Notre-Dame Cathedral led by a Vatican envoy. This festive atmosphere descended into vicious urban combat with Communard resistants in the dead of the night, as [ITA.GetAdjective] tanks easily plowed through inneficient barricades in the large Parisian avenues."
@@ -698,16 +698,16 @@ worldnews.278.c:0 "The Second Weltkrieg ends in a Communard victory. The world i
 worldnews.278.e:0 "Verdun, Chemin des Dames, Somme. They have all been avenged."
 
 worldnews.279.t:0 "The Fall of Berlin" #Russia
-worldnews.279.d:0 "Reports from Berlin confirm that the German capital has been captured by advancing Russian troops after long, merciless fighting through the greatest city of Mitteleuropa. German forces put up stiff resistance, hoping to delay the Russian forces for as long as possible, but were eventually beaten back.\n\nAs shocked Berliners looked on, the Russian army paraded down the Brandeburg Gate, before a speech by [RUS.GetLeader] in front of the famous monument. However, what eventually seems to have caught the attention and memory of the world is a picture of a Russian soldier proudly holding the Russian flag from the roof of a heavily damaged Reichstag, taken by one of his squad mates."
+worldnews.279.d:0 "Reports from Berlin confirm that the German capital has been captured by advancing Russian troops after long, merciless fighting through the greatest city of Mitteleuropa. German forces put up stiff resistance, hoping to delay the Russian forces for as long as possible, but were eventually beaten back.\n\nAs shocked Berliners looked on, the Russian army paraded down the Brandeburg Gate, before a speech by [RUS.GetLeader] in front of the famous monument. However, what eventually seems to have caught the attention and memory of the world is a picture of a Russian soldier proudly holding the Russian flag from the roof of a heavily damaged Reichstag, taken by one of his squadmates."
 worldnews.279.a:0 "The German Empire cannot end like this. Push the Russians back!"
 worldnews.279.b:0 "The Kaiser has finally been put in his place. Russia stands avenged."
-worldnews.279.c:0 "[RUS.GetNameDef] has struck down Mitteleuropa against all odds. A devastating blow."
+worldnews.279.c:0 "[RUS.GetNameDef] has struck down Mitteleuropa against all odds."
 
 worldnews.280.t:0 "The Fall of Berlin" #Soviet Russia
-worldnews.280.d:0 "Reports from Berlin confirm that the German capital has been captured by advancing Soviet troops after long, merciless fighting through the greatest city of Mitteleuropa. German forces put up stiff resistance, hoping to delay the Soviet forces for as long as possible, but were eventually beaten back.\n\nAs shocked Berliners looked on, the Red Army paraded down the Brandeburg Gate, before organising a choir to sing the Internationale as the famous monument was rigged with explosives and destroyed for all the world to see. However, the attention and memory of the world was also caught by a picture of a Soviet soldier proudly holding the Soviet flag from the roof of a heavily damaged Reichstag, taken by one of his squad mates."
+worldnews.280.d:0 "Reports from Berlin confirm that the German capital has been captured by advancing Soviet troops after long, merciless fighting through the greatest city of Mitteleuropa. German forces put up stiff resistance, hoping to delay the Soviet forces for as long as possible, but were eventually beaten back.\n\nAs shocked Berliners looked on, the Red Army paraded down the Brandeburg Gate, before organising a choir to sing the Internationale as the famous monument was rigged with explosives and destroyed for all the world to see. However, the attention and memory of the world was also caught by a picture of a Soviet soldier proudly holding the Soviet flag from the roof of a heavily damaged Reichstag, taken by one of his squadmates."
 worldnews.280.a:0 "The German Empire cannot end like this. Push the Soviets back!"
 worldnews.280.b:0 "The Kaiser has finally been put in his place. Russia stands avenged."
-worldnews.280.c:0 "Soviet Russia has struck down Mitteleuropa against all odds. A devastating blow."
+worldnews.280.c:0 "Soviet Russia has struck down Mitteleuropa against all odds."
 
 worldnews.281.t:0 "The Fall of Berlin" #Lithuania
 worldnews.281.d:0 "Reports from Berlin confirm that the German capital has been captured by advancing Lithuanian troops after long, merciless fighting through the greatest city of Mitteleuropa. German forces put up stiff resistance, hoping to delay the Lithuanian forces for as long as possible, but were eventually beaten back.\n\nAs shocked Berliners looked on, the Lithuanian army paraded down the Brandeburg Gate, before a speech by [LIT.GetLeader] in front of the famous monument. An incredible upset that was predicted by no-one, this Lithuanian victory has made the headlines of every single last piece of newspapers in the entire world, even surpassing over recent news in this troubled time."
