--- a/localisation/KR_Mittelafrika_l_english.yml
+++ b/localisation/KR_Mittelafrika_l_english.yml
@@ -27,7 +27,9 @@ MAF_Improved_Education:0 "Improved Education"
 MAF_Colonial_Nation:0 "Colonial Nation"
 MAF_POR_Payment_For_Colonies:0 "African Colonial Payment"
 MAF_Payment_For_Colonies:0 "African Colonial Payment"
-
+MAF_Native_Youth:0 "Native Youth Organisations"
+MAF_Logging2:0 "Mittelafrikan Wood"
+MAF_Logging1:0 "Mittelafrikan Wood"
 ### Parties ###
 MAF_authoritarian_democrat_party:0 "Schutzgebietsverwaltung"
 MAF_paternal_autocrat_party:0 "Schutzgebietsverwaltung"
@@ -102,7 +104,53 @@ mittel.15.t:0 "The End of the Colonial War"
 mittel.15.d:0 "We have been beaten by the Germans in Africa, and we wouldn't want to bring the fight home so it would be best if we surrendered our colonies in exchange for peace."
 mittel.15.a:0 "Give up the colonies in exchange for peace"
 mittel.15.b:0 "Never! Angola e Nossa!"
-
+mittel.16.t:0 "Portugal Surrenders"
+mittel.16.d:0 "The Portuguese government has surrendered, Angola and Mozambique now belong to us, victory has been achieved!"
+mittel.16.a:0 "Hoorah!"
+mittel.17.t:0 "Portugal Surrenders"
+mittel.17.d:0 "Mittelafrika has seized Angola and Mozambique from Portugal, our colonial holdings grow ever larger."
+mittel.17.a:0 "Give the man responsible a raise"
+mittel.18.t:0 "Mittelafrika Takes Equatorial Guinea"
+mittel.18.d:0 "The German colonial government in Mittelafrika has seized our ex-colony in Equatorial Guinea, one of Syndicalism's holdouts in Africa is gone..."
+mittel.18.a:0 "Colonies are exploitative anyway"
+mittel.19.t:0 "Skull Roads"
+mittel.19.d:0 "The minister of Forced Labour and Security, Reinhard Heydrich has put forward a plan to build roads using forced labour from neighbouring villages. This will obviously anger the local natives but the infastructure gained may be invaluable."
+mittel.19.a:0 "Implement his plan fully"
+mittel.19.b:0 "Implement parts of his plan"
+mittel.19.c:0 "The fool will ruin us, discard his plan"
+mittel.20.t:0 "Settlement Cities"
+mittel.20.d:0 "Stathalter Göring has been wishing for an expansion of German settlement in Mittelafrika. Our Forced Labour Minister Reinhard Heydrich has suggested that we use forced labour to build 'Settlement Cities' for our new colonist citizens. The natives probably won't like it though."
+mittel.20.a:0 "Implement his plan fully"
+mittel.20.b:0 "Implement parts of his plan"
+mittel.20.c:0 "Settlement Cities? What a fool"
+mittel.21.t:0 "Logging Campaigns"
+mittel.21.d:0 "Forced Labour Minister Reinhard Heydrich has suggested that we use native forced labour to chop down forests. This would increase our wood production greatly and make us a leading wood producer in the world. At the cost of angering the natives."
+mittel.21.a:0 "Implement his plan fully"
+mittel.21.b:0 "Implement parts of his plan"
+mittel.21.c:0 "Does Heydrich want to completly ruin Afrika?"
+mittel.22.t:0 "Kaiser Factories"
+mittel.22.d:0 "The Minister of Forced Labour Reinhard Heydrich has suggested that we construct armament manufacturies directly inside Native villages and use forced labour inside them. He calls the manufacturies 'Kaiser Factories'. This would increase our armament production greatly. But the natives would probably not like making guns for their rulers."
+mittel.22.a:0 "Implement his plan fully"
+mittel.22.b:0 "Implement parts of his plan"
+mittel.22.c:0 "Kaiser Factories? What a stupid name"
+mittel.23.t:0 "Mining Campaigns"
+mittel.23.d:0 "The Minister of Forced Labour Reinhard Heydrich has put forward a plan to massivly increase mining in Mittelafrika through use of Forced Labor. This would increase the production of Metals in Mittelafrika. But the conditions inside these mines would probably not make the natives happy."
+mittel.23.a:0 "Implement his plan fully"
+mittel.23.b:0 "Implement parts of his plan"
+mittel.23.c:0 "Heydrich is a fool if he thinks this will work"
+mittel.24.t:0 "African Revolt!"
+mittel.24.d:0 "Due to our abuse of the natives in our Forced Labor programs, they have revolted against our rule! We have sent forces to put them down, but this is still quite a disaster."
+mittel.24.a:0 "Oh no!"
+mittel.25.t:0 "Mittelafrikan Forced Labor"
+mittel.25.d:0 "The Staathalter of Mittelafrika, Herrman Göring has instituted Forced Labor in Mittelafrika, this has caused great suffering in Mittelafrika and has even caused a small revolt. If we let him continue this, he may cause the collapse of Mittelafrika. What should we do?"
+mittel.25.a:0 "Demand that he stop"
+mittel.25.b:0 "We can trust Göring with Mittelafrika"
+mittel.26.t:0 "The Kaiser asks us to stop"
+mittel.26.d:0 "We have recieved a message from Berlin: Stop Forced Labor. As we are a colonial government we should probably hede the Kaiser's word. But after all Göring has the final desicion in Mittelafrika..."
+mittel.26.a:0 "Perhaps we can try our luck..."
+mittel.27.t:0 "Colonists Arrive"
+mittel.27.b:0 "A new batch of immigrants and colonists from Germany and Mitteleuropa have arrived, most of them are settlling in the East coast of Africa, but there are a few brave adventurers looking elsewhere"
+mittel.27.a:0 "Welcome!"
 ### Focuses ###
 MAF_African_Resources:0 "African Resources"
 MAF_Oil_In_Nigeria:0 "Oil In Nigeria"
@@ -139,9 +187,11 @@ MAF_Ban_European_Languages:0 "Ban European Languages"
 MAF_Goering:0 "Herrschaft Görings"
 MAF_Appoint_DAP_Governors:0 "Appoint DAP Governors"
 MAF_Bring_The_DAP_Into_Government:0 "Bring The DAP Into Government"
-MAF_Develop_Sudwest:0 "Develop Sudwest"
-MAF_Develop_Ost:0 "Develop Ost"
-MAF_Develop_West:0 "Develop West"
+MAF_Skull_Roads:0 "Schädelstraßen"
+MAF_Settlement_Cities:0 "Settlement Cities"
+MAF_Logging_Campaigns:0 "Logging Campaigns"
+MAF_Kaiser_Factories:0 "Kaiser Factories"
+MAF_Mining_Campaigns:0 "Mining Campaigns"
 MAF_German_Stat:0 "German Stathalter"
 MAF_Social_Native:0 "Cut Native Social Programs"
 MAF_Fund_Germans:0 "Fund German Business"
@@ -149,6 +199,9 @@ MAF_Teach_Natives:0 "German Schools"
 MAF_Develop_Cities:0 "Develop Cities"
 MAF_Industrialise_Natives:0 "Industrialise Natives"
 MAF_Settle_New_Lands:0 "Settle New Lands"
+MAF_Develop_Sudwest:0 "Develop Sudwest"
+MAF_Develop_Ost:0 "Develop Ost"
+MAF_Develop_West:0 "Develop West"
 MAF_Native_Stat:0 "Native Stathalter"
 MAF_Improve_Native_Conditions:0 "Improve Native Conditions"
 MAF_Native_Youth_Organizations:0 "Native Youth Organisations"
