Small POL change.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -1184,6 +1184,9 @@ poland.208.h:0 "Let us create our own design, instead."
 poland.209.t:0 "Signing the Pacta Conventa"
 poland.209.d:0 "A long-standing tradition of the old Polish-Lithuanian Commonwealth, the Pacta Conventa was a contractual agreement between the people of Poland and the newly elected king. These pacts were continuously signed by elected kings from 1573 to 1764 as a sign of good faith on the part of the monarch. This pact affirmed the king's pledges to the nation, and was written uniquely for each king to sign upon election to the Polish throne. \n\nAs a symbolic gesture of King [POL.GetLeader]'s ascension to the throne, the Sejm has written a new Pacta Conventa for the king to sign. A king has not ruled the polish people for almost 150 years, and many have come to see the king's signing of this document as the de facto beginning of Poland's new age in the modern world."
 poland.209.a:0 "With this signature, a new age begins."
+poland.210.t:0 "Black Monday Hits Poland"
+poland.210.d:0 "The effects of Black Monday are speading throughout the economic world, and Poland is not immune to this disaster. Although economically isolated from most of Europe due to her political situation, Poland's economy still relies heavily on German trading. \n\nNews of this economic disaster has caused a run on banks across the nation, and people are already demanding that the impotent government take action. We can only hope to survive the coming storm."
+poland.210.a:0 "There are rough times ahead."
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
@@ -1214,8 +1217,8 @@ POL_totalist_party:0 "Free Worker's Party"
 POL_totalist_party_long:0 "The Free Worker's Party"
 POL_syndicalist_party:0 "Syndicalist Party"
 POL_syndicalist_party_long:0 "The Syndicalist Party"
-POL_radical_socialist_party:0 "Socialist Coalition"
-POL_radical_socialist_party_long:0 "The Socialist Coalition"
+POL_radical_socialist_party:0 "Anarchist Party"
+POL_radical_socialist_party_long:0 "The Anarchist Party"
 POL_social_democrat_party:0 "Free Polish Party"
 POL_social_democrat_party_long:0 "The Free Polish Party"
 POL_social_liberal_party:0 "People's Coalition"
