--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -680,8 +680,8 @@ PLC_totalist_party:0 "Free Worker's Party"
 PLC_totalist_party_long:0 "The Free Worker's Party"
 PLC_syndicalist_party:0 "Syndicalist Party"
 PLC_syndicalist_party_long:0 "The Syndicalist Party"
-PLC_radical_socialist_party:0 "Socialist Coalition"
-PLC_radical_socialist_party_long:0 "The Socialist Coalition"
+PLC_radical_socialist_party:0 "Anarchist Party"
+PLC_radical_socialist_party_long:0 "The Anarchist Party"
 PLC_social_democrat_party:0 "Free Polish Party"
 PLC_social_democrat_party_long:0 "The Free Polish Party"
 PLC_social_liberal_party:0 "People's Coalition"
