tweaks to new england and the PSA, plus new flag for the CSA

--- a/localisation/KR_New_England_l_english.yml
+++ b/localisation/KR_New_England_l_english.yml
@@ -285,3 +285,11 @@ neeflavor.31.t:0 "Road intergration with Canada?"
 neeflavor.31.d:0 "As we work on build up our economy, the question of which direction we should drive on. While the custom is to drive on the right, since the british revolution in 1925 Canada has driven on the left. Some political leaders have suggested that we switch to driving on the Left and better integrate our road network with the Canadians others of course wish to stay driving on the right. "
 neeflavor.31.a:0 "Switch to Driving on the Left"
 neeflavor.31.b:0 "Switch to Driving on the Right"
+
+neeflavor.32.t:0 "Royal visit to New England"
+neeflavor.32.d:0 "King-Emperor Edward the 8th and his wife Isabelle of Orleans have arrived in Boston today to mark improved ties between New England and Canada. This is the first time that a reigning British monarch has visited Boston in its entire history. As to be expected large jubilant crowds of New Englanders have come out to catch a sight of the King and Queen of the British Empire. The visit was more then just seeing the sites of the sites for they also came to discuss politics with the various leaders of note in New England. "
+neeflavor.32.a:0 "Welcome to Boston!"
+
+neeflavor.33.t:0 "A Royal Visit"
+neeflavor.33.d:0 "King-Emperor Edward the 8th and his wife Isabelle of Orleans have arrived in Boston today to mark improved ties between New England and Canada. This is the first time that a reigning British monarch has visited Boston in its entire history. As to be expected large jubilant crowds of New Englanders have come out to catch a sight of the King and Queen of the British Empire. The visit was more then just seeing the sites of the sites for they also came to discuss politics with the various leaders of note in New England."
+neeflavor.33.a:0 "Welcome to Boston!"
