doublechecking of doublecheked work also helps.

--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -560,7 +560,7 @@ BAT_multi_ling:0 "Political Instability"
 BAT_multi_ling_desc:0 "Our country is an union of multiple cultures. The Native Balts, the Germanised Balts and the Russian minorities all vie for political influence, causing regular conflict and difficulty to set a common policy. This is only made much worse by the German dominance caused by the Kaiser's policies of Germanisation, crushing minority rights and forcing cultural conversion of the 'Native Balts'."
 
 BAT_start_crisis:0 "Conscription Crisis"
-BAT_start_crisis_desc:0 "Only people of German descent or having sufficiently Germanised are allowed into the armed forces. Naturally, as the majority of the people in our country are Native Baltics and resistance to Germanisation is still high, this poses massive conscription issues. However, due to significant unrest and the ever present risk of a revolt, this is currently seen as a necessary evil."
+BAT_start_crisis_desc:0 "Only people of German descent or having sufficiently Germanised are allowed into the armed forces. Naturally, as the majority of the people in our country are Native Balts and resistance to Germanisation is still high, this poses massive conscription issues. However, due to significant unrest and the ever present risk of a revolt, this is currently seen as a necessary evil."
 
 BAT_multi_ling_aut:0 "Minor Autonomy"
 BAT_multi_ling_aut_desc:0 "Following some diplomatic maneuvering, we have succesfully put an end to the Kaiser's plans of Germanisation. Our country is still shattered, but our people are grateful that we saved our minorities from cultural indoctrination. These wounds will take time to heal, but at least they will be able to heal."
