East and West is a HARD concept

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -854,7 +854,7 @@ worldnews.303.t:0 "The Fall of Washington" #PSA
 worldnews.303.d:0 "Californian conscripts have advanced towards and captured the symbolic capital of the United States, Washington D.C. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of the Pacific States of America now flies over the U.S. Capitol.\n\nThe aftermath has been relatively uneventful, with Californian representatives meeting with the general in charge of the push, although unconfirmed sources claim that important governmental figures have been evacuated during the battle, with their current whereabouts unknown."
 worldnews.303.a:0 "The Californians are way out of their place. We will fix this."
 worldnews.303.b:0 "With control of Washington D.C., our independence is more than secure."
-worldnews.303.c:0 "The Californians have some hubris, let's send them back East."
+worldnews.303.c:0 "The Californians have some hubris, let's send them back West."
 worldnews.303.e:0 "This is quite odd, but hopefully the Pacific States should still be influencable."
 worldnews.303.f:0 "Whoever controls Washington D.C. controls America. At least once the fighting is over."
 
@@ -879,11 +879,11 @@ worldnews.306.a:0 "The Californians will not make it far out of the Rockies!"
 worldnews.306.b:0 "The gate to the Great Plains is ours. Now, let us enter."
 worldnews.306.c:0 "The Californians are progressing rapidly. We might have to stop them."
 worldnews.306.e:0 "The Pacific States turn out to be more powerful than expected, interesting."
-worldnews.306.f:0 "With Denver in their hands, the Pacific States hold the Rockies and East Coast firmly."
+worldnews.306.f:0 "With Denver in their hands, the Pacific States hold the Rockies and West Coast firmly."
 
 worldnews.307.t:0 "The Fall of Denver" #CSA
 worldnews.307.d:0 "Syndicate militias have been fighting sparse skirmishes with the Federal Goverment across the Great Plains. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault across the South Platte Valley, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains. The fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that the Federal government is now almost certain to capitulate to the Syndicate."
-worldnews.307.a:0 "The Syndicate will not make it any further East!"
+worldnews.307.a:0 "The Syndicate will not make it any further West!"
 worldnews.307.b:0 "The gate to the Rockies is ours. Now, let us enter."
 worldnews.307.c:0 "The Syndicate is preparing to cross the Rockies. We must do something!"
 worldnews.307.e:0 "The Pacific States are under threat of the Syndicate. This is an issue."
@@ -891,7 +891,7 @@ worldnews.307.f:0 "With Denver in their hands, the Confederate States secure the
 
 worldnews.308.t:0 "The Fall of Denver" #AUS
 worldnews.308.d:0 "Minutemen militias have been fighting sparse skirmishes with the Federal Goverment across the Great Plains. Today, their efforts are crowned as they finally descended on the city of Denver after a large scale assault across the South Platte Valley, Denver being the capital of Colorado and the main Federal stronghold in the Great Plains. The fall of the Queen City of the Plains indeed seems to be a major upset for the future of the United States, and as fighting dies down in the South Platte valley, many experts agree that the Federal government is now almost certain to capitulate to the Minutemen."
-worldnews.308.a:0 "The Syndicate will not make it any further East!"
+worldnews.308.a:0 "The Syndicate will not make it any further West!"
 worldnews.308.b:0 "The gate to the Rockies is ours. Now, let us enter."
 worldnews.308.c:0 "The Syndicate is preparing to cross the Rockies. We must do something!"
 worldnews.308.e:0 "The Pacific States are under threat of the Syndicate. This is an issue."
