--- a/localisation/KR_Mittelafrika_l_english.yml
+++ b/localisation/KR_Mittelafrika_l_english.yml
@@ -33,6 +33,7 @@ MAF_Logging1:0 "Mittelafrikan Wood"
 ### Parties ###
 MAF_authoritarian_democrat_party:0 "Schutzgebietsverwaltung"
 MAF_paternal_autocrat_party:0 "Schutzgebietsverwaltung"
+MAF_social_conservative_party:0 "Bundeskolonialverwaltung"
 MAF_national_populist_party:0 "DAP"
 MAF_national_populist_party_long:0 "Deutsche Afrikapartei"
 MAF_radical_socialist_party:0 "AFP"
