--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -334,7 +334,7 @@ UKR_Army_Reforms:0 "Professional Army"
 UKR_Army_Reforms_desc:0 "It is obvious, that the Ukrainian army cannot be be compared with the Russian or German army in any condition, but it is still stronger than any army of the neighbouring states. That's why Skoropadsky proposed a creation of the small professional army, which will help us maintain our security, but will also allow us to reduce the defence budget."
 UKR_Peasant_State:0 "Peasant State"
 UKR_Peasant_State_desc:0 "Our peasants has always been playing a significant role in the country and its economy. Now, when we get enough money after the reduction of the defence budget, we can reduce the taxes until our agriculture recovers from the Berlin Stock crisis and we will become a breadbasket of Europe once again."
-UKR_Prohibit_Syndicalism:0 "Prohibit the Syndicalism"
+UKR_Prohibit_Syndicalism:0 "Prohibit Syndicalism"
 UKR_Prohibit_Syndicalism_desc:0 "We have reached an understanding with the pro-Russian circles, pacified the various Ukrainian movements and made the peasants loyal to us. Now we have to deal with the Syndicalists. Our mass media will start a massive campaign, showing the Syndies as the main enemy of the Slavdom. This propaganda will help us to ban many notorious left parties."
 UKR_Federalisation:0 "Federalisation"
 UKR_Federalisation_desc:0 "One of the most serious Ukrainian problem was that fact, that the Syndicalists, Nationalists and the Russophiles tried to impose their ideas to the whole country. If we give our regions more autonomy and weaken the Supreme Rada, we will be able to control all parts of Ukraine without forcing of any popular, but regional idea for the whole country."
