Finished Russian annexations events and nerfed the white ruthenian bonds focus

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2173,6 +2173,37 @@ AST_australia_national_populist:0 "Australia"
 AST_australia_national_populist_ADJ:0 "Australian"
 AST_australia_national_populist_DEF:0 "Australia"
 
+FNG_manchurian_empire_totalist:0 "Commune of Manchuria"
+FNG_manchurian_empire_totalist_ADJ:0 "Manchurian"
+FNG_manchurian_empire_totalist_DEF:0 "The Commune of Manchuria"
+FNG_manchurian_empire_syndicalist:0 "Commune of Manchuria"
+FNG_manchurian_empire_syndicalist_ADJ:0 "Manchurian"
+FNG_manchurian_empire_syndicalist_DEF:0 "The Commune of Manchuria"
+FNG_manchurian_empire_radical_socialist:0 "Commune of Manchuria"
+FNG_manchurian_empire_radical_socialist_ADJ:0 "Manchurian"
+FNG_manchurian_empire_radical_socialist_DEF:0 "The Commune of Manchuria"
+FNG_manchurian_empire_social_democrat:0 "Empire of Manchuria"
+FNG_manchurian_empire_social_democrat_ADJ:0 "Manchurian"
+FNG_manchurian_empire_social_democrat_DEF:0 "The Empire of Manchuria"
+FNG_manchurian_empire_social_liberal:0 "Empire of Manchuria"
+FNG_manchurian_empire_social_liberal_ADJ:0 "Manchurian"
+FNG_manchurian_empire_social_liberal_DEF:0 "The Empire of Manchuria"
+FNG_manchurian_empire_market_liberal:0 "Empire of Manchuria"
+FNG_manchurian_empire_market_liberal_ADJ:0 "Manchurian"
+FNG_manchurian_empire_market_liberal_DEF:0 "The Empire of Manchuria"
+FNG_manchurian_empire_social_conservative:0 "Empire of Manchuria"
+FNG_manchurian_empire_social_conservative_ADJ:0 "Manchurian"
+FNG_manchurian_empire_social_conservative_DEF:0 "The Empire of Manchuria"
+FNG_manchurian_empire_authoritarian_democrat:0 "Empire of Manchuria"
+FNG_manchurian_empire_authoritarian_democrat_ADJ:0 "Manchurian"
+FNG_manchurian_empire_authoritarian_democrat_DEF:0 "The Empire of Manchuria"
+FNG_manchurian_empire_paternal_autocrat:0 "Empire of Manchuria"
+FNG_manchurian_empire_paternal_autocrat_ADJ:0 "Manchurian"
+FNG_manchurian_empire_paternal_autocrat_DEF:0 "The Empire of Manchuria"
+FNG_manchurian_empire_national_populist:0 "Empire of Manchuria"
+FNG_manchurian_empire_national_populist_ADJ:0 "Manchurian"
+FNG_manchurian_empire_national_populist_DEF:0 "The Empire of Manchuria"
+
 ##############
 #Vanilla
 ##############
