--- a/localisation/KR_Russia_Foreign_l_english.yml
+++ b/localisation/KR_Russia_Foreign_l_english.yml
@@ -2098,9 +2098,7 @@ rusfor.1268.b:0 "We don't need them."
 rusfor.1269.t:0 "White Ruthenia needs our help!"
 rusfor.1269.d:0 "The government of White Ruthenia wants our support, because Russia is going to buy their state bonds to control the economy of this small country. It seems that if we don't intervene, White Ruthenia will be soon annexed by the Russians!"
 rusfor.1269.a:0 "Warn Russia, they must turn back!"
-rusfor.1269.b:0 "Warn Russia, they must turn back!"
-rusfor.1269.c:0 "They can do what they want."
-rusfor.1269.d:0 "They can do what they want."
+rusfor.1269.b:0 "They can do what they want."
 
 rusfor.1270.t:0 "Germany supports White Ruthenia!"
 rusfor.1270.d:0 "The Germans don't allow us to buy White Ruthenian state bonds. It seems that the Germans are ready to defend their sphere of influence in the Eastern Europe. What should we do?"
@@ -2116,6 +2114,11 @@ rusfor.1272.t:0 "White Ruthenia is alone!"
 rusfor.1272.d:0 "The German government doesn't want to protect White Ruthenia. But White Ruthenia isn't going to sell us their state bonds. Maybe we should take back our lands, using our army?"
 rusfor.1272.a:0 "Let's do it!"
 rusfor.1272.b:0 "We don't need White Ruthenia."
+
+rusfor.12722.t:0 "Russia is threatening our hold on White Ruthenia!"
+rusfor.12722.d:0 "Russia offered our puppet White Ruthenia to buy some of its state bonds and is now going to control most of its economy. Unfortunately the White Ruthenian government accepted this offer and Russia is now closer than ever from annexing White Ruthenia to their empire for good. Should we intervene?"
+rusfor.12722.a:0 "Unacceptable! We'll take back our puppet!"
+rusfor.12722.b:0 "They can do what they want."
 
 rusfor.1273.t:0 "Spiritual Administration of the Muslims of Central Asia."
 rusfor.1273.d:0 "After the annexation of Central Asia, we got many new Muslim citizens, who were ruled before by the local obscurantist priests and preachers. It is obvious, that we have to do something with their legacy and turn our new citizens into loyal and peaceful members of the Russian society. Now we have two propositions - we can establish a special Spiritual Administration of the Muslims of Central Asia or give an additional powers to the Orenburg Muslim Spiritual Assembly, which is controlled by the loyal Tatars and Bashkirs."
