--- a/localisation/KR_American_Civil_War_l_english.yml
+++ b/localisation/KR_American_Civil_War_l_english.yml
@@ -1146,6 +1146,80 @@ amcivwar.405.a:0 "Darn it!"
 amcivwar.406.t:0 "The Battle of the Union Station"
 amcivwar.406.d:0 "After several chaotic hours, it is now clear that our forces has been forced out of the St. Louis Union Station and into the suburbs, where they are now digging in and waiting for reinforcements. While they were able to mobilise some supporters to our cause, the enemy, now in control of the railway infrastructure, has been more successful..."
 amcivwar.406.a:0 "We tried!"
+
+amcivwar.407.t:0 "The Appalachians ripe for the taking"
+amcivwar.407.d:0 "Most of the small towns in the Appalachian mountains are still loyal to the old government of the United States. However, tensions are brewing, with the population reportedly being split evenly among Loyalists, Syndicalists and Firsters. Law enforcement is spread thin, and US reserve forces would need some time to arrive.\n\nA decisive strike could even lead to some inhabitants rallying behind us. It would also place us in control of the chokepoint controlling railway traffic into the eastern seaboard."
+amcivwar.407.a:0 "Send an Expedition!"
+amcivwar.407.b:0 "We can't spare the resources..."
+amcivwar.408.t:0 "Enemies Appalachians-bound"
+amcivwar.408.d:0 "The Appalachians are still - mostly - loyal to our government. However, tensions are brewing, with the population reportedly being split evenly among Loyalists, Syndicalists and Firsters. The few towns are only weakly defended by police forces, and reserve forces would need some time to arrive. \n\nWe're now getting reports that our enemies are mobilising an expedition to take the mountains by force. This would place them in control of the chokepoint controlling railway traffic into the eastern seaboard."
+amcivwar.408.a:0 "Send in the military!"
+amcivwar.408.b:0 "Law Enforcement will deal with this!"
+amcivwar.409.t:0 "The Appalachians are being attacked"
+amcivwar.409.d:0 "Most of the small towns in the Appalachian mountains are still loyal to the old government of the United States. However, tensions are brewing, with the population reportedly being split evenly among Loyalists, Syndicalists and Firsters. The city is only weakly defended by police forces, and reserve forces would need some time to arrive. \n\nWe're now getting reports that our enemies are mobilising an expedition to take the city by force, while the US government is unsure on how to react. This would place them in control of the chokepoint controlling railway traffic into the eastern seaboard."
+amcivwar.409.a:0 "Send a Counter-expedition!"
+amcivwar.409.b:0 "We can't spare the resources..."
+amcivwar.410.t:0 "Reports from the Appalachians"
+amcivwar.410.d:0 "After several days of hasty preparation, we're now getting unclear reports out of the Appalachians stating that some kind of battle is taking place..."
+amcivwar.410.a:0 "Let's hope for the best..."
+amcivwar.411.t:0 "The Appalachian Grinder"
+amcivwar.411.d:0 "After several chaotic days, it is now clear that armed inhabitants of the Appalachians in support of our government have secured most of the mountainside. They have hoisted our banner over the destroyed railway tracks and are holding defensive positions while waiting for reinforcements; The enemy has been pushed out of the immediate area, but is still present in the woods and hills..."
+amcivwar.411.a:0 "Good enough!"
+amcivwar.412.t:0 "The Appalachian Grinder"
+amcivwar.412.d:0 "After several chaotic hours, it is now clear that our forces has been forced away from the embattled railway chokepoint and into the sorrounding hills and woods, where they are now digging in and waiting for reinforcements. While they were able to mobilise some supporters to our cause, the enemy, now in control of the railway infrastructure, has been more successful..."
+amcivwar.412.a:0 "Darn it!"
+amcivwar.413.t:0 "The Appalachian Grinder"
+amcivwar.413.d:0 "After several chaotic hours, it is now clear that our forces has been forced away from the embattled railway chokepoint and into the sorrounding hills and woods, where they are now digging in and waiting for reinforcements. While they were able to mobilise some supporters to our cause, the enemy, now in control of the railway infrastructure, has been more successful..."
+amcivwar.413.a:0 "We tried!"
+
+amcivwar.414.t:0 "Wall Street under siege"
+amcivwar.414.d:0 "New York is entirely occupied by the Syndicalist insurrectionists. Well, not entirely... Somehow, the New York Stock Exchange building in Wall Street has become the only building in New York still under our control, housing several thousands of refugees while Syndicalist snipers wait down the street. These besieged survivors are frantically radioing us, asking for a fleet detachment to be sent to New York to pick them up.\n\nThis would be a highly risky task, but could land us an incredible propaganda coup - and also a few highly needed additional troops. What should we do?"
+amcivwar.414.a:0 "Let's try it!"
+amcivwar.414.b:0 "Our hands are bound."
+amcivwar.415.t:0 "The US sends relief to New York"
+amcivwar.415.d:0 "We currently have most of New York under our control - apart from the hated Wall Street and especially the Stock Exchange building itself, which has become a rallying point for counter-revolutionary elements. According to the latest intel, the US are sending a small naval squadron to ecavuate their troops! This squadron will not be able to endanger our position in New York; Their only goal will be to get their allies out of the city.\n\nWe could now either rally additional militias to hold the quays against the naval reinforcements or hope that our troops currently present will be enough. What shall we do?"
+amcivwar.415.a:0 "Rally more militia!"
+amcivwar.415.b:0 "Let them come!"
+amcivwar.416.t:0 "The Battle of Wall Street"
+amcivwar.416.d:0 "After hasty preparations, the US squadron has come into view behind Ellis island while the loyalists pinned inside the Stock Exchange building are trying to break out! Our commanders are confident they can put up with the two-pronged attack..."
+amcivwar.416.a:0 "Let's hope for the best..."
+amcivwar.417.t:0 "Wall Street raid successful"
+amcivwar.417.d:0 "Success! Our small squadron was able to slip into New York harbour before insurgent naval forces could be mobilised, and even though they took losses from snipers stationed high in the skyline, they were able to link up with the loyalists after their successful breakout! \n\nThe commander of the naval squadron and many of the evacuees, who fough tooth and nail against the Syndicalists, are being honoured as heroes!"
+amcivwar.417.a:0 "Incredible!"
+amcivwar.418.t:0 "Wall Street siege failed"
+amcivwar.418.d:0 "Failure! Our militias were unable to hold back the small US squadron from evacuating the counter-revolutionaries. Even though losses were minimal, this is still a blow to the prestige of the Combined Syndicates! \n\nThe commander of our militia forces will face a tribunal for his failures shortly."
+amcivwar.418.a:0 "Damn it!"
+amcivwar.419.t:0 "The Hudson trap springs"
+amcivwar.419.d:0 "Success! Our militia commanders successfully exploited the vulnerability of the US squadron, preparing an extensive ambush with use of both water mines as well as an ad-hoc improvised aerial attack! The Statue of Liberty took some damage, but we were able to prohibit the squadron from leaving the harbour until they finally surrendered.\n\nThe militias - but especially its commander - who fough tooth and nail against the Counter-revolutionaries, are being honoured as heroes!"
+amcivwar.419.a:0 "Incredible!"
+amcivwar.420.t:0 "The Hudson trap springs"
+amcivwar.420.d:0 "Failure! Our small squadron was able to slip into New York harbour, only to be attacked by both water mines as well as an aerial attack apparently out of nowhere! Our info - coming from the Stock Exchange radio station - is thin, but it seems when the squadron finally surrendered, the pinned down loyalists laid down their arms as well.\n\nThe commander of the squadron will face a trial for his failures - once the war is won, that is."
+amcivwar.420.a:0 "Damn it!"
+
+amcivwar.421.t:0 "Fort Sumter under shelling"
+amcivwar.421.d:0 "For the second time in the history of our nation, Fort Sumter in South Carolina has come under shelling by insurrectionist artillery. Our garrison is frantically radioing us, asking for a fleet detachment to sail down there and pick them up.\n\nThis would be a highly risky task, but could land us an incredible propaganda coup - and also a few highly needed additional troops. What should we do?"
+amcivwar.421.a:0 "Let's try it!"
+amcivwar.421.b:0 "Our hands are bound."
+amcivwar.422.t:0 "The US sends relief to Fort Sumter"
+amcivwar.422.d:0 "We currently have most of Charleston under our control - apart from Fort Sumter, which was only recently re-built. According to the latest intel, the US are sending a small naval squadron to ecavuate their troops! This squadron will not be able to threaten our position in Charleston; Their only goal will be to get their allies out of the Fort.\n\nWe could now either rally an im-promptu blockade to hold the siege against the naval reinforcements or hope that our artillery currently present will be enough. What shall we do?"
+amcivwar.422.a:0 "Rally more boats!"
+amcivwar.422.b:0 "Let them come!"
+amcivwar.423.t:0 "The Second Battle of Fort Sumter"
+amcivwar.423.d:0 "After hasty preparations, the US squadron has come into view behind Fort Sumter while the loyalists pinned inside the Fort are trying to break out! Our commanders are confident they can put up with the two-pronged attack..."
+amcivwar.423.a:0 "Let's hope for the best..."
+amcivwar.424.t:0 "Fort Sumter raid successful"
+amcivwar.424.d:0 "Success! Our small squadron was able to slip into Charleston harbour before insurgent naval forces could be mobilised, and even though they took losses from artillery shelling, they were able to link up with the loyalists after their successful breakout! \n\nThe commander of the naval squadron and many of the evacuees, who fough tooth and nail against the Syndicalists, are being honoured as heroes!"
+amcivwar.424.a:0 "Incredible!"
+amcivwar.425.t:0 "The Fort Sumter Hellgate"
+amcivwar.425.d:0 "Success! Our militia commanders successfully exploited the vulnerability of the US squadron, holding their artillery fire until the ships had laid anchor beside the fort to take on the evacuees! Fort Sumter was completely destroyed in the ensuing shelling, and so was most of the squadron - our river boat flotilla could only pick up a few dozen survivors afterwards.\n\nThe militia commander is being honoured as a hero!"
+amcivwar.425.a:0 "Incredible!"
+amcivwar.426.t:0 "The Fort Sumter Hellgate"
+amcivwar.426.d:0 "Failure! Our small squadron was able to slip into Charleston harbour, only to be lit up by an incredible artillery barrage apparently out of nowhere! Our info - coming from the Fort Sumter radio station - is thin, but it seems that after the squadron had been obliterated, the few survivors in Fort Sumter itself surrendered as well.\n\nThe squadron commander would now be facing a trial for his sever failures - if he was still alive, that is."
+amcivwar.426.a:0 "Damn it!"
+amcivwar.427.t:0 "Fort Sumter siege failed"
+amcivwar.427.d:0 "Failure! Our artillery was unable to hold back the small US squadron from evacuating the counter-revolutionaries. Even though losses were minimal, this is still a blow to the prestige of the Union State! \n\nThe commander of our militia forces will face a tribunal for his failures shortly."
+amcivwar.427.a:0 "Damn it!"
+
 amcivwar.500.t:0 "Fate of the Unions"
 amcivwar.500.d:0 "With the civil war now over, it is time to decide the fate of the Labour Unions. Most of the Labour Unions were part of the Combined Syndicates of America Federation and took up arms with the outbreak of the conflict. More conservative elements are wanting us to ban them as a punishment for taking up arms while others are advocating clemency as a way to rebuild America."
 amcivwar.500.a:0 "Allow the Unions"
