Chile loc bugfix

--- a/localisation/KR_Chile_l_english.yml
+++ b/localisation/KR_Chile_l_english.yml
@@ -171,7 +171,8 @@ chl.ally.2.t:0 "Chile wishes to join our Alliance"
 chl.ally.2.d:0 "Chile's revolutionary government has shifted it's stance to one that aligns with local syndicalist regimes after their elections, and thus they naturally came to us, asking for a military alliance"
 chl.ally.2.a:0 "The end of the La Plata union is just the beginning! Avante!"
 chl.ally.2.b:0 "That is pointless!"
-chl.5.t:0 #the battle of poets, government reworking and Marées event chains are not in 0.4 sry.
+#the battle of poets, government reworking and Marées event chains are not in 0.4 sry.
+chl.5.t:0 
 chl.5.d:0 
 chl.5.a:0 
 chl.5.b:0 
