Ausgleich semi-playable until day 3

--- a/localisation/KR_Austria_Ausgleich_new_l_english.yml
+++ b/localisation/KR_Austria_Ausgleich_new_l_english.yml
@@ -5,6 +5,9 @@ ausgleich.new.101.t:0 "An Invitation to the Ausgleich"
 ausgleich.new.102.t:0 "Hungary agrees to attend"
 
 ausgleich.new.200.t:0 "Invite others to the Ausgleich?"
+ausgleich.new.200.a:0 "No way. This is between us and the Magyars."
+ausgleich.new.200.b:0 "You are right. Invite the Bohemians, Galicians and Illyrians."
+ausgleich.new.200.c:0 "We need to think bigger. Invite all peoples of the Dual Monarchy."
 ausgleich.new.201.t:0 "Other Nations at the Ausgleich"
 ausgleich.new.202.t:0 "An Invitation to the Ausgleich"
 ausgleich.new.203.t:0 "An Invitation to the Ausgleich"
@@ -30,6 +33,13 @@ ausgleich.new.303.t:0 "The Delegations arrive"
 ausgleich.new.304.t:0 "The Delegations arrive - Hungary absent"
 
 ausgleich.new.310.t:0 "A Hungarian Delegatory holds a speech"
+ausgleich.new.310.a:0 "How insolent."
+ausgleich.new.310.b:0 "Remove him from the negotiations."
+ausgleich.new.310.c:0 "He's right though, isn't he?"
+ausgleich.new.310.e:0 "Remove him from the negotiations."
+ausgleich.new.310.f:0 "He's right though, isn't he?"
+ausgleich.new.310.g:0 "Remove him from the negotiations."
+ausgleich.new.310.h:0 "He's right though, isn't he?"
 ausgleich.new.311.t:0 "Hungary demands Reparation"
 ausgleich.new.312.t:0 "Bohemia proposes a Slovak State"
 ausgleich.new.313.t:0 "Galicia demands Transcarpathia"
