--- a/localisation/KR_Austria_Ausgleich_new_l_english.yml
+++ b/localisation/KR_Austria_Ausgleich_new_l_english.yml
@@ -52,13 +52,14 @@ ausgleich.new.319.t:0 "The Romanians demands Transylvania"
 
 ausgleich.new.320.t:0 "The Ausgleich Negotiations are over"
 ausgleich.new.321.t:0 "The End of the Ausgleich"
-ausgleich.new.322.t:0 "Austria agrees to pay Reparations"
-ausgleich.new.323.t:0 "Austria proposes Illyrian reparations"
-ausgleich.new.324.t:0 "The Ausgleich Negotiations are over"
+ausgleich.new.321.t:0 "Hungary leaves the Ausgleich"
+ausgleich.new.323.t:0 "Austria agrees to pay Reparations"
+ausgleich.new.324.t:0 "Austria proposes Illyrian reparations"
 ausgleich.new.325.t:0 "The Ausgleich Negotiations are over"
-ausgleich.new.326.t:0 "A Delegatory returns Home early"
-ausgleich.new.327.t:0 "The Delegation returns Home early"
+ausgleich.new.326.t:0 "The Ausgleich Negotiations are over"
+ausgleich.new.327.t:0 "A Delegatory returns Home early"
 ausgleich.new.328.t:0 "The Delegation returns Home early"
+ausgleich.new.329.t:0 "The Delegation returns Home early"
 
 ausgleich.new.330.t:0 "Hungary takes up our Reparation offer"
 ausgleich.new.331.t:0 "Hungary demands Reparations"
@@ -84,3 +85,12 @@ ausgleich.new.354.t:0 "Result of the Ausgleich: Transcarpathia granted"
 ausgleich.new.355.t:0 "Delegation returns from the Ausgleich"
 ausgleich.new.356.t:0 "Result of the Ausgleich: Banate granted"
 ausgleich.new.357.t:0 "Delegation returns from the Ausgleich"
+
+ausgleich.new.360.t:0 "Slovak and Romanian Nationalism"
+ausgleich.new.361.t:0 "Slovak Nationalism"
+ausgleich.new.362.t:0 "Romanian Nationalism"
+ausgleich.new.363.t:0 "Slovak and Romanian demonstrations put down in Hungary"
+ausgleich.new.364.t:0 "Slovak demonstrations put down in Hungary"
+ausgleich.new.365.t:0 "Austria demands our Authorities to evacuate Slovakia and Transylvania"
+ausgleich.new.366.t:0 "Austria demands our Authorities to evacuate Slovakia"
+ausgleich.new.367.t:0 "Austria demands our Authorities to evacuate Transylvania"
