--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -936,7 +936,7 @@ ott.138.d:0 "-"
 ott.138.a:0 "-"
 
 ott.139.t:0 "Military factions - Teceddüt Clique"
-ott.139.d:0 "A large clique of officers within our army known to be affiliated with the Teceddüt Party are complicit in the recent revolts against the monarchy. As the military wing of Young Turks, these officers had instigated mass rebellion against Abdülhamid II in 1908, and later dethroned him in 1909. Now, decades later, many of the same men appear to be working to undermine Ottoman authority. It appears that these men harbor loyalties other than to the nation and to the Sultan."
+ott.139.d:0 "A large clique of officers within our army known to be affiliated with the Teceddüt Party are complicit in the recent revolts against the monarchy. As the military wing of Young Turks, these officers had instigated mass rebellion against Abdülhamid II in 1908, and later dethroned him in 1909. Now, decades later, many of the same men appear to be working to undermine Ottoman authority. It appears that these men harbor loyalties other than to the nation and the Sultan."
 ott.139.a:0 "Remove them from the army and politics"
 
 ott.140.t:0 "Military factions - Halaskar Zabitan"
