tweaks to the AUS

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -338,17 +338,12 @@ unionstate.3.t:0 "Rebirth of the Country"
 unionstate.3.d:0 "After the devastation of the American Civil War, Long and the America First Party were hoping to rebuild America stronger than before. The Syndicalist threat was still present around the world and a strong America was needed to meet that threat. Due to the war there was a significant labour shortage and tough decisions would be needed to get the country back on its feet."
 unionstate.3.a:0 "Conscript the labour required"
 unionstate.3.b:0 "The corporations can handle this"
+
 unionstate.571.t:0 "The American Union State Youth"
 unionstate.571.d:0 "Fritz Kuhn has submitted a plan to start a Youth Foundation in the AUS and is looking for approval. The Foundation would show Adolescents the purpose of America First and to teach them discipline above all things and loyalty to the New State. We're in need of new recruits, and Fritz Kuhn's Youth Foundation may be part of the solution."
 unionstate.571.a:0 "Let Kuhn have his Daycare"
 unionstate.571.b:0 "We don't feel comfortable about this..."
-unionstate.4.t:0 "The American Union Constitution"
-unionstate.4.d:0 "The end of the Civil War and the AUS victory meant a new era for America. A new constitution would be drafted to ensure that the American Union State was on par with that of the founding fathers and that America would be strong and ever vigilante against the enemies of the American way of life."
-unionstate.4.a:0 "Sign the document."
-unionstate.5.t:0 "American Union War Industry"
-unionstate.5.d:0 "Long was opposed to converting all the American Union industry to the war effort. The people were important to Long but the needs of the industry may be more important."
-unionstate.5.a:0 "Total war it is."
-unionstate.5.b:0 "Butter before guns."
+
 unionstate.6.t:0 "The CSA Escapes to France"
 unionstate.6.d:0 "Reed and the CSA leadership were forced to flee to the Commune of France to escape the wrath of the victorious American Union State."
 unionstate.6.a:0 "He better not return"
@@ -359,10 +354,6 @@ unionstate.7.b:0 "Amnesty it is"
 unionstate.8.t:0 "US Government in Exile"
 unionstate.8.d:0 "The victory of America First over the US government has forced them to flee from the country to Canada. The government has vowed to keep on fighting but without a firm power base there is very little chance of making a difference."
 unionstate.8.a:0 "Ha."
-unionstate.9.t:0 "The Beacon of the New America"
-unionstate.9.d:0 "Long wanted to show the world that the old and corrupt America was gone. He chose to make his hometown, New Orleans, the beacon of the new America. The city would undergo a massive transformation, new streets and buildings would make it the most modern city in the Americas and a massive shipyard would make it the hub of trade in the south. The massive shipyard would also be the birthplace of the new US navy which would safeguard America's future. Critics however thought the plan would be too expensive."
-unionstate.9.a:0 "No expense will stop this"
-unionstate.9.b:0 "A pipe dream in the end"
 unionstate.12.t:0 "Long's Tariff"
 unionstate.12.d:0 "To encourage the expansion of American industry, Long planned on implementing a hefty tariff on imported goods. He was warned that the tariff may be worse for the economy in the end."
 unionstate.12.a:0 "Implement the tariff"
@@ -370,10 +361,6 @@ unionstate.12.b:0 "We can do without this"
 unionstate.13.t:0 "American Union Recession"
 unionstate.13.d:0 "Long's tariff had initially helped build a greater reliance on American industry but it was unsustainable in the long run. The American Union State fell into recession and unemployment began to rise."
 unionstate.13.a:0 "Damn."
-unionstate.10.t:0 "Share Our Wealth"
-unionstate.10.d:0 "Long's plan was to make every man a king. He would tax those who were holders of excessive wealth and use the money to provide public works projects and social services to all Americans. Extreme members of the party saw this as nothing more than a socialist betrayal and threatened trouble against Long if he proceeded."
-unionstate.10.a:0 "Proceed with the plan."
-unionstate.10.b:0 "We need the extremists"
 unionstate.14.t:0 "Show Trials"
 unionstate.14.d:0 "American socialism had been defeated and now Long was going to make them pay the price. Socialists, Anarchists, and anyone who had supported the CSA had been subject to prosecution by the American Union State. Minute Men began rounding up members of the left and special tribunals were setup. These were nothing more than show trials that humiliated and lambasted the accused."
 unionstate.14.a:0 "Hang them all!"
@@ -512,7 +499,13 @@ unionstate.62.b:0 "We cannot risk them tainting the American new order!"
 TEX_FEDERAL_IFFICIER_CORPS:0 "Old USA leaders will be added to our army."
 unionstate.100.t:0 "The New America"
 unionstate.100.d:0 "The failure of the plot against Huey Long has allowed him to remove his political rivals and opponents. This has given him a great leeway in reshaping America. A new day is rising in America, and Long's presence is felt everywhere even if it is not seen. America is still a republic and democracy still exists, but the American First Party dominates. The ever fickle American mob is sated by Long's Populism and peace and order has returned to America."
-unionstate.100.a:0 "Every man is a king!"
+unionstate.100.a:0 "Every man a king!"
+unionstate.101.t:0 "Vice President elections"
+unionstate.101.d:0 "While power remains with Huey Long, democracy still technically exists and to keep the American mob sated and on his side, Elections have been called to keep the people happy. Various factions are competing for influence and power. The question though is whom shall win the elections?"
+unionstate.101.a:0 "Lindbergh wins with Smith's support"
+unionstate.101.b:0 "Smith wins with Father Caughlin's support"
+unionstate.101.c:0 "Father Caughlin wins with Lindbergh's support"
+
 unionstate.130.t:0 "The New America"
 unionstate.130.d:0 "The death of Huey Long swept the American Legion into power lead by William Dudley Pelley. This allowed the extremists within the American First to reshape America to their own desires. And today a new dawn has risen in America. Once located to mainly the south, Jim Crow laws now are the law of the land throughout the country. Christianity has been reinforced as the religion of the people and the country."
 unionstate.130.a:0 "God Bless America!"
@@ -677,3 +670,4 @@ unionstate.244.t:0 "Syndicalism in Central America"
 unionstate.244.d:0 "The United Provinces have lost and now Central America is under syndicalist control. Many in the government are advocating for a crusade against Syndicalism and stop it from spreading it further in the Americas."
 unionstate.244.a:0 "We shall destroy Syndicalism"
 unionstate.244.b:0 "It won't spread"
+
