Add missing flag loc for Canada

--- a/localisation/KR_Canada_l_english.yml
+++ b/localisation/KR_Canada_l_english.yml
@@ -127,6 +127,7 @@ CAN_CSA_PACT:0 "Pact with the Combined Syndicates of America."
 entente_research_name:0 "The Imperial Scientific and Academic Council."
 entente_research_desc:0 "The Imperial Scientific and Academic Council is the scientific institute of the British Empire as well as the Entente."
 SCHEME_1_BYPASS:0 "Defence Scheme No. 1 is overdue."
+END_ACW:0 "The Second American Civil War is over."
 
 ### Parties ###
 
